[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.1.0"
qrcodegen = "1.8.0"
term_size = "*"
image = "0.24.9"
qrcode = "0.13"  # Add this line for QR code generation
rand = "0.8"
[build-dependencies]
cc = "1.0"

